@@ -5,3 +5,4 @@
 * Drop support for Django<3.2.
 * Drop support Python < 3.6.
 * Added Ukrainian language.
+* Added support for django request.
